--- a/WeatherAccu/Info.plist
+++ b/WeatherAccu/Info.plist
@@ -6,20 +6,17 @@
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
-		<key>UISceneConfigurations</key>
-		<dict>
-			<key>UIWindowSceneSessionRoleApplication</key>
-			<array>
-				<dict>
-					<key>UISceneConfigurationName</key>
-					<string>Default Configuration</string>
-					<key>UISceneDelegateClassName</key>
-					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
-				</dict>
-			</array>
-		</dict>
 	</dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Location data is used to find you the accurate weather details</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Location data is used to find you the accurate weather details</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Location data is used to find you the accurate weather details</string>
 </dict>
 </plist>
